# appstore-review-cli

./: .gitignore  CLAUDE.md  LICENSE  README.md  SKILL.md  cli.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
appinsight/: __init__.py  __main__.py  analyzer.py  cli.py  compare.py  dataframe.py  filters.py  formatters.py  google_play.py  scraper.py  setup.py  trend.py  version_diff.py
appinsight/commands/: analyzer.py  compare.py  trend.py  version_diff.py
appinsight/instructions/: claude.md  copilot.md
appinsight/instructions/scripts/: run.sh
appinsight/output/: dataframe.py  filters.py  formatters.py
appinsight/scrapers/: google_play.py
docs/: MCP_RATING.md
tests/: test_compare.py  test_country.py  test_export.py  test_filters.py  test_formatters.py  test_google_play.py  test_scraper.py  test_setup.py  test_trend.py  test_version_diff.py
