[project]
name = "appstore-review-cli"
version = "0.1.0"
description = "Scrape App Store and Google Play reviews. Filter the noise. Feed the signal to your coding agent."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["app-store", "reviews", "scraper", "cli", "ai", "llm", "coding-agent"]
authors = [
    { name = "Vasilis Kayatas" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
pandas = ["pandas>=1.5"]
google = [
    "google-play-scraper>=1.2",
]

[project.urls]
Homepage = "https://github.com/vkayatas/appstore-review-cli"
Repository = "https://github.com/vkayatas/appstore-review-cli"
Issues = "https://github.com/vkayatas/appstore-review-cli/issues"

[project.scripts]
appstore-reviews = "appinsight.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["appinsight"]

[tool.hatch.build.targets.wheel.force-include]
"appinsight/instructions/claude.md" = "appinsight/instructions/claude.md"
"appinsight/instructions/copilot.md" = "appinsight/instructions/copilot.md"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
